# friendnotes-migrator

./: CREDITS  Cargo.toml  README.md  actionlint.yml  validate-renovate.yml
.github/workflows/: ci.yml  release.yml  review.yml
src/: main.rs
