[package]
name = "friendnotes-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
