[package]
name = "friendnotes-migrator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
serde = { version = "1.0.159", features = ["derive"] }
reqwest = { version = "0.11.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
